Fixing pdf page z-index

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -31,6 +31,7 @@ $bookmark-yellow: #efdf1a;
   right: 0;
   left: 0;
   min-height: 400px;
+  z-index: 1;
 }
 
 .cf-pdf-container {
